# Pintos

./: .gitignore  CMakeLists.txt
docs/: main.md
grading/: grade.sh
pintos/: CMakeLists.txt
pintos/src/: CMakeLists.txt  Makefile.build
pintos/src/devices/: ide.c  kbd.c  partition.c  serial.c  shutdown.c  timer.c  vga.c
pintos/src/threads/: fixpoint.h  init.c  loader.S  palloc.c  start.S  switch.S  synch.c  synch.h  thread.c  thread.h  vaddr.h
pintos/src/userprog/: exception.c  gdt.c  pagedir.c  process.c  process.h  syscall.c  syscall.h
pintos/src/vm/: frame.c  frame.h  page.c  page.h  swap.c  swap.h
src/: CMakeLists.txt  Makefile.build
src/devices/: block.c  input.c  intq.c  intq.h  pit.c  rtc.c  speaker.c  timer.c
src/threads/: init.c  interrupt.c  intr-stubs.S  kernel.lds.S  malloc.c  pte.h  synch.h  thread.c  thread.h
src/userprog/: exception.c  gdt.h  process.c  process.h  syscall.c  syscall.h  tss.c
src/vm/: frame.c  frame.h  page.c  swap.c
