cmake_minimum_required(VERSION 3.10)
project(pintos)

set(CMAKE_CXX_STANDARD 11)

add_definitions(-DUSERPROG)

include_directories(src/devices)
include_directories(src/filesys)
include_directories(src/lib)
include_directories(src/lib/kernel)
include_directories(src/lib/user)
include_directories(src/tests)
include_directories(src/tests/filesys)
include_directories(src/tests/filesys/base)
include_directories(src/tests/filesys/extended)
include_directories(src/tests/threads)
include_directories(src/tests/userprog)
include_directories(src/tests/vm)
include_directories(src/threads)
include_directories(src/userprog)

add_executable(pintos
        src/devices/block.c
        src/devices/block.h
        src/devices/ide.c
        src/devices/ide.h
        src/devices/input.c
        src/devices/input.h
        src/devices/intq.c
        src/devices/intq.h
        src/devices/kbd.c
        src/devices/kbd.h
        src/devices/partition.c
        src/devices/partition.h
        src/devices/pit.c
        src/devices/pit.h
        src/devices/rtc.c
        src/devices/rtc.h
        src/devices/serial.c
        src/devices/serial.h
        src/devices/shutdown.c
        src/devices/shutdown.h
        src/devices/speaker.c
        src/devices/speaker.h
        src/devices/timer.c
        src/devices/timer.h
        src/devices/vga.c
        src/devices/vga.h
        src/examples/bubsort.c
        src/examples/cat.c
        src/examples/cmp.c
        src/examples/cp.c
        src/examples/echo.c
        src/examples/halt.c
        src/examples/hex-dump.c
        src/examples/insult.c
        src/examples/lineup.c
        src/examples/ls.c
        src/examples/Makefile
        src/examples/matmult.c
        src/examples/mcat.c
        src/examples/mcp.c
        src/examples/mkdir.c
        src/examples/pwd.c
        src/examples/recursor.c
        src/examples/rm.c
        src/examples/shell.c
        src/filesys/directory.c
        src/filesys/directory.h
        src/filesys/file.c
        src/filesys/file.h
        src/filesys/filesys.c
        src/filesys/filesys.h
        src/filesys/free-map.c
        src/filesys/free-map.h
        src/filesys/fsutil.c
        src/filesys/fsutil.h
        src/filesys/inode.c
        src/filesys/inode.h
        src/filesys/Make.vars
        src/filesys/Makefile
        src/filesys/off_t.h
        src/lib/kernel/bitmap.c
        src/lib/kernel/bitmap.h
        src/lib/kernel/console.c
        src/lib/kernel/console.h
        src/lib/kernel/debug.c
        src/lib/kernel/hash.c
        src/lib/kernel/hash.h
        src/lib/kernel/list.c
        src/lib/kernel/list.h
        src/lib/kernel/stdio.h
        src/lib/user/console.c
        src/lib/user/debug.c
        src/lib/user/entry.c
        src/lib/user/stdio.h
        src/lib/user/syscall.c
        src/lib/user/syscall.h
        src/lib/user/user.lds
        src/lib/arithmetic.c
        src/lib/ctype.h
        src/lib/debug.c
        src/lib/debug.h
        src/lib/inttypes.h
        src/lib/limits.h
        src/lib/packed.h
        src/lib/random.c
        src/lib/random.h
        src/lib/round.h
        src/lib/stdarg.h
        src/lib/stdbool.h
        src/lib/stddef.h
        src/lib/stdint.h
        src/lib/stdio.c
        src/lib/stdio.h
        src/lib/stdlib.c
        src/lib/stdlib.h
        src/lib/string.c
        src/lib/string.h
        src/lib/syscall-nr.h
        src/lib/ustar.c
        src/lib/ustar.h
        src/misc/bochs-2.2.6-big-endian.patch
        src/misc/bochs-2.2.6-build.sh
        src/misc/bochs-2.2.6-gdbstub-ENN.patch
        src/misc/bochs-2.2.6-jitter.patch
        src/misc/bochs-2.2.6-ms-extensions.patch
        src/misc/bochs-2.2.6-namespace.patch
        src/misc/bochs-2.2.6-page-fault-segv.patch
        src/misc/bochs-2.2.6-paranoia.patch
        src/misc/bochs-2.2.6-solaris-link.patch
        src/misc/bochs-2.2.6-solaris-tty.patch
        src/misc/bochs-2.2.6-triple-fault.patch
        src/misc/bochs-2.6.2-banner-stderr.patch
        src/misc/bochs-2.6.2-block-device-check.patch
        src/misc/bochs-2.6.2-build.sh
        src/misc/bochs-2.6.2-const-char.patch
        src/misc/bochs-2.6.2-jitter-plus-segv.patch
        src/misc/bochs-2.6.2-xrandr-pkgconfig.patch
        src/misc/gcc-3.3.6-cross-howto
        src/misc/gdb-macros
        src/misc/toolchain-build.sh
        src/tests/Algorithm/Diff.pm
        src/tests/filesys/base/child-syn-read.c
        src/tests/filesys/base/child-syn-wrt.c
        src/tests/filesys/base/full.inc
        src/tests/filesys/base/lg-create.c
        src/tests/filesys/base/lg-create.ck
        src/tests/filesys/base/lg-full.c
        src/tests/filesys/base/lg-full.ck
        src/tests/filesys/base/lg-random.c
        src/tests/filesys/base/lg-random.ck
        src/tests/filesys/base/lg-seq-block.c
        src/tests/filesys/base/lg-seq-block.ck
        src/tests/filesys/base/lg-seq-random.c
        src/tests/filesys/base/lg-seq-random.ck
        src/tests/filesys/base/Make.tests
        src/tests/filesys/base/random.inc
        src/tests/filesys/base/Rubric
        src/tests/filesys/base/seq-block.inc
        src/tests/filesys/base/seq-random.inc
        src/tests/filesys/base/sm-create.c
        src/tests/filesys/base/sm-create.ck
        src/tests/filesys/base/sm-full.c
        src/tests/filesys/base/sm-full.ck
        src/tests/filesys/base/sm-random.c
        src/tests/filesys/base/sm-random.ck
        src/tests/filesys/base/sm-seq-block.c
        src/tests/filesys/base/sm-seq-block.ck
        src/tests/filesys/base/sm-seq-random.c
        src/tests/filesys/base/sm-seq-random.ck
        src/tests/filesys/base/syn-read.c
        src/tests/filesys/base/syn-read.ck
        src/tests/filesys/base/syn-read.h
        src/tests/filesys/base/syn-remove.c
        src/tests/filesys/base/syn-remove.ck
        src/tests/filesys/base/syn-write.c
        src/tests/filesys/base/syn-write.ck
        src/tests/filesys/base/syn-write.h
        src/tests/filesys/extended/child-syn-rw.c
        src/tests/filesys/extended/dir-empty-name-persistence.ck
        src/tests/filesys/extended/dir-empty-name.c
        src/tests/filesys/extended/dir-empty-name.ck
        src/tests/filesys/extended/dir-mk-tree-persistence.ck
        src/tests/filesys/extended/dir-mk-tree.c
        src/tests/filesys/extended/dir-mk-tree.ck
        src/tests/filesys/extended/dir-mkdir-persistence.ck
        src/tests/filesys/extended/dir-mkdir.c
        src/tests/filesys/extended/dir-mkdir.ck
        src/tests/filesys/extended/dir-open-persistence.ck
        src/tests/filesys/extended/dir-open.c
        src/tests/filesys/extended/dir-open.ck
        src/tests/filesys/extended/dir-over-file-persistence.ck
        src/tests/filesys/extended/dir-over-file.c
        src/tests/filesys/extended/dir-over-file.ck
        src/tests/filesys/extended/dir-rm-cwd-persistence.ck
        src/tests/filesys/extended/dir-rm-cwd.c
        src/tests/filesys/extended/dir-rm-cwd.ck
        src/tests/filesys/extended/dir-rm-parent-persistence.ck
        src/tests/filesys/extended/dir-rm-parent.c
        src/tests/filesys/extended/dir-rm-parent.ck
        src/tests/filesys/extended/dir-rm-root-persistence.ck
        src/tests/filesys/extended/dir-rm-root.c
        src/tests/filesys/extended/dir-rm-root.ck
        src/tests/filesys/extended/dir-rm-tree-persistence.ck
        src/tests/filesys/extended/dir-rm-tree.c
        src/tests/filesys/extended/dir-rm-tree.ck
        src/tests/filesys/extended/dir-rmdir-persistence.ck
        src/tests/filesys/extended/dir-rmdir.c
        src/tests/filesys/extended/dir-rmdir.ck
        src/tests/filesys/extended/dir-under-file-persistence.ck
        src/tests/filesys/extended/dir-under-file.c
        src/tests/filesys/extended/dir-under-file.ck
        src/tests/filesys/extended/dir-vine-persistence.ck
        src/tests/filesys/extended/dir-vine.c
        src/tests/filesys/extended/dir-vine.ck
        src/tests/filesys/extended/grow-create-persistence.ck
        src/tests/filesys/extended/grow-create.c
        src/tests/filesys/extended/grow-create.ck
        src/tests/filesys/extended/grow-dir-lg-persistence.ck
        src/tests/filesys/extended/grow-dir-lg.c
        src/tests/filesys/extended/grow-dir-lg.ck
        src/tests/filesys/extended/grow-dir.inc
        src/tests/filesys/extended/grow-file-size-persistence.ck
        src/tests/filesys/extended/grow-file-size.c
        src/tests/filesys/extended/grow-file-size.ck
        src/tests/filesys/extended/grow-root-lg-persistence.ck
        src/tests/filesys/extended/grow-root-lg.c
        src/tests/filesys/extended/grow-root-lg.ck
        src/tests/filesys/extended/grow-root-sm-persistence.ck
        src/tests/filesys/extended/grow-root-sm.c
        src/tests/filesys/extended/grow-root-sm.ck
        src/tests/filesys/extended/grow-seq-lg-persistence.ck
        src/tests/filesys/extended/grow-seq-lg.c
        src/tests/filesys/extended/grow-seq-lg.ck
        src/tests/filesys/extended/grow-seq-sm-persistence.ck
        src/tests/filesys/extended/grow-seq-sm.c
        src/tests/filesys/extended/grow-seq-sm.ck
        src/tests/filesys/extended/grow-seq.inc
        src/tests/filesys/extended/grow-sparse-persistence.ck
        src/tests/filesys/extended/grow-sparse.c
        src/tests/filesys/extended/grow-sparse.ck
        src/tests/filesys/extended/grow-tell-persistence.ck
        src/tests/filesys/extended/grow-tell.c
        src/tests/filesys/extended/grow-tell.ck
        src/tests/filesys/extended/grow-two-files-persistence.ck
        src/tests/filesys/extended/grow-two-files.c
        src/tests/filesys/extended/grow-two-files.ck
        src/tests/filesys/extended/Make.tests
        src/tests/filesys/extended/mk-tree.c
        src/tests/filesys/extended/mk-tree.h
        src/tests/filesys/extended/Rubric.functionality
        src/tests/filesys/extended/Rubric.persistence
        src/tests/filesys/extended/Rubric.robustness
        src/tests/filesys/extended/syn-rw-persistence.ck
        src/tests/filesys/extended/syn-rw.c
        src/tests/filesys/extended/syn-rw.ck
        src/tests/filesys/extended/syn-rw.h
        src/tests/filesys/extended/tar.c
        src/tests/filesys/create.inc
        src/tests/filesys/Grading.no-vm
        src/tests/filesys/Grading.with-vm
        src/tests/filesys/seq-test.c
        src/tests/filesys/seq-test.h
        src/tests/internal/list.c
        src/tests/internal/stdio.c
        src/tests/internal/stdlib.c
        src/tests/threads/alarm-multiple.ck
        src/tests/threads/alarm-negative.c
        src/tests/threads/alarm-negative.ck
        src/tests/threads/alarm-priority.c
        src/tests/threads/alarm-priority.ck
        src/tests/threads/alarm-simultaneous.c
        src/tests/threads/alarm-simultaneous.ck
        src/tests/threads/alarm-single.ck
        src/tests/threads/alarm-wait.c
        src/tests/threads/alarm-zero.c
        src/tests/threads/alarm-zero.ck
        src/tests/threads/alarm.pm
        src/tests/threads/Grading
        src/tests/threads/Make.tests
        src/tests/threads/mlfqs-block.c
        src/tests/threads/mlfqs-block.ck
        src/tests/threads/mlfqs-fair-2.ck
        src/tests/threads/mlfqs-fair-20.ck
        src/tests/threads/mlfqs-fair.c
        src/tests/threads/mlfqs-load-1.c
        src/tests/threads/mlfqs-load-1.ck
        src/tests/threads/mlfqs-load-60.c
        src/tests/threads/mlfqs-load-60.ck
        src/tests/threads/mlfqs-load-avg.c
        src/tests/threads/mlfqs-load-avg.ck
        src/tests/threads/mlfqs-nice-10.ck
        src/tests/threads/mlfqs-nice-2.ck
        src/tests/threads/mlfqs-recent-1.c
        src/tests/threads/mlfqs-recent-1.ck
        src/tests/threads/mlfqs.pm
        src/tests/threads/priority-change.c
        src/tests/threads/priority-change.ck
        src/tests/threads/priority-condvar.c
        src/tests/threads/priority-condvar.ck
        src/tests/threads/priority-donate-chain.c
        src/tests/threads/priority-donate-chain.ck
        src/tests/threads/priority-donate-lower.c
        src/tests/threads/priority-donate-lower.ck
        src/tests/threads/priority-donate-multiple.c
        src/tests/threads/priority-donate-multiple.ck
        src/tests/threads/priority-donate-multiple2.c
        src/tests/threads/priority-donate-multiple2.ck
        src/tests/threads/priority-donate-nest.c
        src/tests/threads/priority-donate-nest.ck
        src/tests/threads/priority-donate-one.c
        src/tests/threads/priority-donate-one.ck
        src/tests/threads/priority-donate-sema.c
        src/tests/threads/priority-donate-sema.ck
        src/tests/threads/priority-fifo.c
        src/tests/threads/priority-fifo.ck
        src/tests/threads/priority-preempt.c
        src/tests/threads/priority-preempt.ck
        src/tests/threads/priority-sema.c
        src/tests/threads/priority-sema.ck
        src/tests/threads/Rubric.alarm
        src/tests/threads/Rubric.mlfqs
        src/tests/threads/Rubric.priority
        src/tests/threads/tests.c
        src/tests/threads/tests.h
        src/tests/userprog/no-vm/Make.tests
        src/tests/userprog/no-vm/multi-oom.c
        src/tests/userprog/no-vm/multi-oom.ck
        src/tests/userprog/no-vm/Rubric
        src/tests/userprog/args-dbl-space.ck
        src/tests/userprog/args-many.ck
        src/tests/userprog/args-multiple.ck
        src/tests/userprog/args-none.ck
        src/tests/userprog/args-single.ck
        src/tests/userprog/args.c
        src/tests/userprog/bad-jump.c
        src/tests/userprog/bad-jump.ck
        src/tests/userprog/bad-jump2.c
        src/tests/userprog/bad-jump2.ck
        src/tests/userprog/bad-read.c
        src/tests/userprog/bad-read.ck
        src/tests/userprog/bad-read2.c
        src/tests/userprog/bad-read2.ck
        src/tests/userprog/bad-write.c
        src/tests/userprog/bad-write.ck
        src/tests/userprog/bad-write2.c
        src/tests/userprog/bad-write2.ck
        src/tests/userprog/boundary.c
        src/tests/userprog/boundary.h
        src/tests/userprog/child-bad.c
        src/tests/userprog/child-close.c
        src/tests/userprog/child-rox.c
        src/tests/userprog/child-simple.c
        src/tests/userprog/close-bad-fd.c
        src/tests/userprog/close-bad-fd.ck
        src/tests/userprog/close-normal.c
        src/tests/userprog/close-normal.ck
        src/tests/userprog/close-stdin.c
        src/tests/userprog/close-stdin.ck
        src/tests/userprog/close-stdout.c
        src/tests/userprog/close-stdout.ck
        src/tests/userprog/close-twice.c
        src/tests/userprog/close-twice.ck
        src/tests/userprog/create-bad-ptr.c
        src/tests/userprog/create-bad-ptr.ck
        src/tests/userprog/create-bound.c
        src/tests/userprog/create-bound.ck
        src/tests/userprog/create-empty.c
        src/tests/userprog/create-empty.ck
        src/tests/userprog/create-exists.c
        src/tests/userprog/create-exists.ck
        src/tests/userprog/create-long.c
        src/tests/userprog/create-long.ck
        src/tests/userprog/create-normal.c
        src/tests/userprog/create-normal.ck
        src/tests/userprog/create-null.c
        src/tests/userprog/create-null.ck
        src/tests/userprog/exec-arg.c
        src/tests/userprog/exec-arg.ck
        src/tests/userprog/exec-bad-ptr.c
        src/tests/userprog/exec-bad-ptr.ck
        src/tests/userprog/exec-bound-2.c
        src/tests/userprog/exec-bound-2.ck
        src/tests/userprog/exec-bound-3.c
        src/tests/userprog/exec-bound-3.ck
        src/tests/userprog/exec-bound.c
        src/tests/userprog/exec-bound.ck
        src/tests/userprog/exec-missing.c
        src/tests/userprog/exec-missing.ck
        src/tests/userprog/exec-multiple.c
        src/tests/userprog/exec-multiple.ck
        src/tests/userprog/exec-once.c
        src/tests/userprog/exec-once.ck
        src/tests/userprog/exit.c
        src/tests/userprog/exit.ck
        src/tests/userprog/Grading
        src/tests/userprog/halt.c
        src/tests/userprog/halt.ck
        src/tests/userprog/Make.tests
        src/tests/userprog/multi-child-fd.c
        src/tests/userprog/multi-child-fd.ck
        src/tests/userprog/multi-recurse.c
        src/tests/userprog/multi-recurse.ck
        src/tests/userprog/null.ck
        src/tests/userprog/open-bad-ptr.c
        src/tests/userprog/open-bad-ptr.ck
        src/tests/userprog/open-boundary.c
        src/tests/userprog/open-boundary.ck
        src/tests/userprog/open-empty.c
        src/tests/userprog/open-empty.ck
        src/tests/userprog/open-missing.c
        src/tests/userprog/open-missing.ck
        src/tests/userprog/open-normal.c
        src/tests/userprog/open-normal.ck
        src/tests/userprog/open-null.c
        src/tests/userprog/open-null.ck
        src/tests/userprog/open-twice.c
        src/tests/userprog/open-twice.ck
        src/tests/userprog/read-bad-fd.c
        src/tests/userprog/read-bad-fd.ck
        src/tests/userprog/read-bad-ptr.c
        src/tests/userprog/read-bad-ptr.ck
        src/tests/userprog/read-boundary.c
        src/tests/userprog/read-boundary.ck
        src/tests/userprog/read-normal.c
        src/tests/userprog/read-normal.ck
        src/tests/userprog/read-stdout.c
        src/tests/userprog/read-stdout.ck
        src/tests/userprog/read-zero.c
        src/tests/userprog/read-zero.ck
        src/tests/userprog/rox-child.c
        src/tests/userprog/rox-child.ck
        src/tests/userprog/rox-child.inc
        src/tests/userprog/rox-multichild.c
        src/tests/userprog/rox-multichild.ck
        src/tests/userprog/rox-simple.c
        src/tests/userprog/rox-simple.ck
        src/tests/userprog/Rubric.functionality
        src/tests/userprog/Rubric.robustness
        src/tests/userprog/sample.inc
        src/tests/userprog/sample.txt
        src/tests/userprog/sc-bad-arg.c
        src/tests/userprog/sc-bad-arg.ck
        src/tests/userprog/sc-bad-sp.c
        src/tests/userprog/sc-bad-sp.ck
        src/tests/userprog/sc-boundary-2.c
        src/tests/userprog/sc-boundary-2.ck
        src/tests/userprog/sc-boundary-3.c
        src/tests/userprog/sc-boundary-3.ck
        src/tests/userprog/sc-boundary.c
        src/tests/userprog/sc-boundary.ck
        src/tests/userprog/wait-bad-pid.c
        src/tests/userprog/wait-bad-pid.ck
        src/tests/userprog/wait-killed.c
        src/tests/userprog/wait-killed.ck
        src/tests/userprog/wait-simple.c
        src/tests/userprog/wait-simple.ck
        src/tests/userprog/wait-twice.c
        src/tests/userprog/wait-twice.ck
        src/tests/userprog/write-bad-fd.c
        src/tests/userprog/write-bad-fd.ck
        src/tests/userprog/write-bad-ptr.c
        src/tests/userprog/write-bad-ptr.ck
        src/tests/userprog/write-boundary.c
        src/tests/userprog/write-boundary.ck
        src/tests/userprog/write-normal.c
        src/tests/userprog/write-normal.ck
        src/tests/userprog/write-stdin.c
        src/tests/userprog/write-stdin.ck
        src/tests/userprog/write-zero.c
        src/tests/userprog/write-zero.ck
        src/tests/vm/child-inherit.c
        src/tests/vm/child-linear.c
        src/tests/vm/child-mm-wrt.c
        src/tests/vm/child-qsort-mm.c
        src/tests/vm/child-qsort.c
        src/tests/vm/child-sort.c
        src/tests/vm/Grading
        src/tests/vm/Make.tests
        src/tests/vm/mmap-bad-fd.c
        src/tests/vm/mmap-bad-fd.ck
        src/tests/vm/mmap-clean.c
        src/tests/vm/mmap-clean.ck
        src/tests/vm/mmap-close.c
        src/tests/vm/mmap-close.ck
        src/tests/vm/mmap-exit.c
        src/tests/vm/mmap-exit.ck
        src/tests/vm/mmap-inherit.c
        src/tests/vm/mmap-inherit.ck
        src/tests/vm/mmap-misalign.c
        src/tests/vm/mmap-misalign.ck
        src/tests/vm/mmap-null.c
        src/tests/vm/mmap-null.ck
        src/tests/vm/mmap-over-code.c
        src/tests/vm/mmap-over-code.ck
        src/tests/vm/mmap-over-data.c
        src/tests/vm/mmap-over-data.ck
        src/tests/vm/mmap-over-stk.c
        src/tests/vm/mmap-over-stk.ck
        src/tests/vm/mmap-overlap.c
        src/tests/vm/mmap-overlap.ck
        src/tests/vm/mmap-read.c
        src/tests/vm/mmap-read.ck
        src/tests/vm/mmap-remove.c
        src/tests/vm/mmap-remove.ck
        src/tests/vm/mmap-shuffle.c
        src/tests/vm/mmap-shuffle.ck
        src/tests/vm/mmap-twice.c
        src/tests/vm/mmap-twice.ck
        src/tests/vm/mmap-unmap.c
        src/tests/vm/mmap-unmap.ck
        src/tests/vm/mmap-write.c
        src/tests/vm/mmap-write.ck
        src/tests/vm/mmap-zero.c
        src/tests/vm/mmap-zero.ck
        src/tests/vm/page-linear.c
        src/tests/vm/page-linear.ck
        src/tests/vm/page-merge-mm.c
        src/tests/vm/page-merge-mm.ck
        src/tests/vm/page-merge-par.c
        src/tests/vm/page-merge-par.ck
        src/tests/vm/page-merge-seq.c
        src/tests/vm/page-merge-seq.ck
        src/tests/vm/page-merge-stk.c
        src/tests/vm/page-merge-stk.ck
        src/tests/vm/page-parallel.c
        src/tests/vm/page-parallel.ck
        src/tests/vm/page-shuffle.c
        src/tests/vm/page-shuffle.ck
        src/tests/vm/parallel-merge.c
        src/tests/vm/parallel-merge.h
        src/tests/vm/process_death.pm
        src/tests/vm/pt-bad-addr.c
        src/tests/vm/pt-bad-addr.ck
        src/tests/vm/pt-bad-read.c
        src/tests/vm/pt-bad-read.ck
        src/tests/vm/pt-big-stk-obj.c
        src/tests/vm/pt-big-stk-obj.ck
        src/tests/vm/pt-grow-bad.c
        src/tests/vm/pt-grow-bad.ck
        src/tests/vm/pt-grow-pusha.c
        src/tests/vm/pt-grow-pusha.ck
        src/tests/vm/pt-grow-stack.c
        src/tests/vm/pt-grow-stack.ck
        src/tests/vm/pt-grow-stk-sc.c
        src/tests/vm/pt-grow-stk-sc.ck
        src/tests/vm/pt-write-code-2.c
        src/tests/vm/pt-write-code.c
        src/tests/vm/pt-write-code.ck
        src/tests/vm/pt-write-code2.ck
        src/tests/vm/qsort.c
        src/tests/vm/qsort.h
        src/tests/vm/Rubric.functionality
        src/tests/vm/Rubric.robustness
        src/tests/vm/sample.inc
        src/tests/vm/sample.txt
        src/tests/arc4.c
        src/tests/arc4.h
        src/tests/arc4.pm
        src/tests/cksum.c
        src/tests/cksum.h
        src/tests/cksum.pm
        src/tests/lib.c
        src/tests/lib.h
        src/tests/lib.pm
        src/tests/main.c
        src/tests/main.h
        src/tests/make-grade
        src/tests/Make.tests
        src/tests/random.pm
        src/tests/tests.pm
        src/threads/flags.h
        src/threads/init.c
        src/threads/init.h
        src/threads/interrupt.c
        src/threads/interrupt.h
        src/threads/intr-stubs.h
        src/threads/intr-stubs.S
        src/threads/io.h
        src/threads/kernel.lds.S
        src/threads/loader.h
        src/threads/loader.S
        src/threads/Make.vars
        src/threads/Makefile
        src/threads/malloc.c
        src/threads/malloc.h
        src/threads/palloc.c
        src/threads/palloc.h
        src/threads/pte.h
        src/threads/start.S
        src/threads/switch.h
        src/threads/switch.S
        src/threads/synch.c
        src/threads/synch.h
        src/threads/thread.c
        src/threads/thread.h
        src/threads/vaddr.h
        src/userprog/build/devices/block.d
        src/userprog/build/devices/block.o
        src/userprog/build/devices/ide.d
        src/userprog/build/devices/ide.o
        src/userprog/build/devices/input.d
        src/userprog/build/devices/input.o
        src/userprog/build/devices/intq.d
        src/userprog/build/devices/intq.o
        src/userprog/build/devices/kbd.d
        src/userprog/build/devices/kbd.o
        src/userprog/build/devices/partition.d
        src/userprog/build/devices/partition.o
        src/userprog/build/devices/pit.d
        src/userprog/build/devices/pit.o
        src/userprog/build/devices/rtc.d
        src/userprog/build/devices/rtc.o
        src/userprog/build/devices/serial.d
        src/userprog/build/devices/serial.o
        src/userprog/build/devices/shutdown.d
        src/userprog/build/devices/shutdown.o
        src/userprog/build/devices/speaker.d
        src/userprog/build/devices/speaker.o
        src/userprog/build/devices/timer.d
        src/userprog/build/devices/timer.o
        src/userprog/build/devices/vga.d
        src/userprog/build/devices/vga.o
        src/userprog/build/filesys/directory.d
        src/userprog/build/filesys/directory.o
        src/userprog/build/filesys/file.d
        src/userprog/build/filesys/file.o
        src/userprog/build/filesys/filesys.d
        src/userprog/build/filesys/filesys.o
        src/userprog/build/filesys/free-map.d
        src/userprog/build/filesys/free-map.o
        src/userprog/build/filesys/fsutil.d
        src/userprog/build/filesys/fsutil.o
        src/userprog/build/filesys/inode.d
        src/userprog/build/filesys/inode.o
        src/userprog/build/lib/kernel/bitmap.d
        src/userprog/build/lib/kernel/bitmap.o
        src/userprog/build/lib/kernel/console.d
        src/userprog/build/lib/kernel/console.o
        src/userprog/build/lib/kernel/debug.d
        src/userprog/build/lib/kernel/debug.o
        src/userprog/build/lib/kernel/hash.d
        src/userprog/build/lib/kernel/hash.o
        src/userprog/build/lib/kernel/list.d
        src/userprog/build/lib/kernel/list.o
        src/userprog/build/lib/user/console.d
        src/userprog/build/lib/user/console.o
        src/userprog/build/lib/user/debug.d
        src/userprog/build/lib/user/debug.o
        src/userprog/build/lib/user/entry.d
        src/userprog/build/lib/user/entry.o
        src/userprog/build/lib/user/syscall.d
        src/userprog/build/lib/user/syscall.o
        src/userprog/build/lib/arithmetic.d
        src/userprog/build/lib/arithmetic.o
        src/userprog/build/lib/debug.d
        src/userprog/build/lib/debug.o
        src/userprog/build/lib/random.d
        src/userprog/build/lib/random.o
        src/userprog/build/lib/stdio.d
        src/userprog/build/lib/stdio.o
        src/userprog/build/lib/stdlib.d
        src/userprog/build/lib/stdlib.o
        src/userprog/build/lib/string.d
        src/userprog/build/lib/string.o
        src/userprog/build/lib/ustar.d
        src/userprog/build/lib/ustar.o
        src/userprog/build/threads/init.d
        src/userprog/build/threads/init.o
        src/userprog/build/threads/interrupt.d
        src/userprog/build/threads/interrupt.o
        src/userprog/build/threads/intr-stubs.d
        src/userprog/build/threads/intr-stubs.o
        src/userprog/build/threads/kernel.lds.s
        src/userprog/build/threads/loader.o
        src/userprog/build/threads/malloc.d
        src/userprog/build/threads/malloc.o
        src/userprog/build/threads/palloc.d
        src/userprog/build/threads/palloc.o
        src/userprog/build/threads/start.d
        src/userprog/build/threads/start.o
        src/userprog/build/threads/switch.d
        src/userprog/build/threads/switch.o
        src/userprog/build/threads/synch.d
        src/userprog/build/threads/synch.o
        src/userprog/build/threads/thread.d
        src/userprog/build/threads/thread.o
        src/userprog/build/userprog/exception.d
        src/userprog/build/userprog/exception.o
        src/userprog/build/userprog/gdt.d
        src/userprog/build/userprog/gdt.o
        src/userprog/build/userprog/pagedir.d
        src/userprog/build/userprog/pagedir.o
        src/userprog/build/userprog/process.d
        src/userprog/build/userprog/process.o
        src/userprog/build/userprog/syscall.d
        src/userprog/build/userprog/syscall.o
        src/userprog/build/userprog/tss.d
        src/userprog/build/userprog/tss.o
        src/userprog/build/kernel.asm
        src/userprog/build/kernel.bin
        src/userprog/build/kernel.o
        src/userprog/build/kernel.sym
        src/userprog/build/libc.a
        src/userprog/build/loader.asm
        src/userprog/build/loader.bin
        src/userprog/build/Makefile
        src/userprog/build/pintos.sh
        src/userprog/exception.c
        src/userprog/exception.h
        src/userprog/gdt.c
        src/userprog/gdt.h
        src/userprog/Make.vars
        src/userprog/Makefile
        src/userprog/pagedir.c
        src/userprog/pagedir.h
        src/userprog/process.c
        src/userprog/process.h
        src/userprog/syscall.c
        src/userprog/syscall.h
        src/userprog/tss.c
        src/userprog/tss.h
        src/utils/backtrace
        src/utils/Makefile
        src/utils/pintos
        src/utils/pintos-gdb
        src/utils/pintos-mkdisk
        src/utils/pintos-set-cmdline
        src/utils/Pintos.pm
        src/utils/setitimer-helper
        src/utils/setitimer-helper.c
        src/utils/setitimer-helper.o
        src/utils/squish-pty
        src/utils/squish-pty.c
        src/utils/squish-pty.o
        src/utils/squish-unix
        src/utils/squish-unix.c
        src/utils/squish-unix.o
        src/vm/Make.vars
        src/vm/Makefile
        src/LICENSE
        src/Make.config
        src/Makefile
        src/Makefile.build
        src/Makefile.kernel
        src/Makefile.userprog
        src/pintos.sh)
