cmake_minimum_required(VERSION 3.10.3)
project(src C)

set(CMAKE_C_STANDARD 11)

add_definitions(-DUSERPROG)

include_directories(devices)
include_directories(filesys)
include_directories(lib)
include_directories(lib/kernel)
include_directories(lib/user)
include_directories(tests)
include_directories(tests/filesys)
include_directories(tests/filesys/base)
include_directories(tests/filesys/extended)
include_directories(tests/threads)
include_directories(tests/userprog)
include_directories(tests/vm)
include_directories(threads)
include_directories(userprog)

add_executable(src
        devices/block.c
        devices/block.h
        devices/ide.c
        devices/ide.h
        devices/input.c
        devices/input.h
        devices/intq.c
        devices/intq.h
        devices/kbd.c
        devices/kbd.h
        devices/partition.c
        devices/partition.h
        devices/pit.c
        devices/pit.h
        devices/rtc.c
        devices/rtc.h
        devices/serial.c
        devices/serial.h
        devices/shutdown.c
        devices/shutdown.h
        devices/speaker.c
        devices/speaker.h
        devices/timer.c
        devices/timer.h
        devices/vga.c
        devices/vga.h
        examples/bubsort.c
        examples/cat.c
        examples/cmp.c
        examples/cp.c
        examples/echo.c
        examples/halt.c
        examples/hex-dump.c
        examples/insult.c
        examples/lineup.c
        examples/ls.c
        examples/matmult.c
        examples/mcat.c
        examples/mcp.c
        examples/mkdir.c
        examples/pwd.c
        examples/recursor.c
        examples/rm.c
        examples/shell.c
        filesys/directory.c
        filesys/directory.h
        filesys/file.c
        filesys/file.h
        filesys/filesys.c
        filesys/filesys.h
        filesys/free-map.c
        filesys/free-map.h
        filesys/fsutil.c
        filesys/fsutil.h
        filesys/inode.c
        filesys/inode.h
        filesys/off_t.h
        lib/kernel/bitmap.c
        lib/kernel/bitmap.h
        lib/kernel/console.c
        lib/kernel/console.h
        lib/kernel/debug.c
        lib/kernel/hash.c
        lib/kernel/hash.h
        lib/kernel/list.c
        lib/kernel/list.h
        lib/kernel/stdio.h
        lib/user/console.c
        lib/user/debug.c
        lib/user/entry.c
        lib/user/stdio.h
        lib/user/syscall.c
        lib/user/syscall.h
        lib/arithmetic.c
        lib/ctype.h
        lib/debug.c
        lib/debug.h
        lib/inttypes.h
        lib/limits.h
        lib/packed.h
        lib/random.c
        lib/random.h
        lib/round.h
        lib/stdarg.h
        lib/stdbool.h
        lib/stddef.h
        lib/stdint.h
        lib/stdio.c
        lib/stdio.h
        lib/stdlib.c
        lib/stdlib.h
        lib/string.c
        lib/string.h
        lib/syscall-nr.h
        lib/ustar.c
        lib/ustar.h
        tests/filesys/base/child-syn-read.c
        tests/filesys/base/child-syn-wrt.c
        tests/filesys/base/lg-create.c
        tests/filesys/base/lg-full.c
        tests/filesys/base/lg-random.c
        tests/filesys/base/lg-seq-block.c
        tests/filesys/base/lg-seq-random.c
        tests/filesys/base/sm-create.c
        tests/filesys/base/sm-full.c
        tests/filesys/base/sm-random.c
        tests/filesys/base/sm-seq-block.c
        tests/filesys/base/sm-seq-random.c
        tests/filesys/base/syn-read.c
        tests/filesys/base/syn-read.h
        tests/filesys/base/syn-remove.c
        tests/filesys/base/syn-write.c
        tests/filesys/base/syn-write.h
        tests/filesys/extended/child-syn-rw.c
        tests/filesys/extended/dir-empty-name.c
        tests/filesys/extended/dir-mk-tree.c
        tests/filesys/extended/dir-mkdir.c
        tests/filesys/extended/dir-open.c
        tests/filesys/extended/dir-over-file.c
        tests/filesys/extended/dir-rm-cwd.c
        tests/filesys/extended/dir-rm-parent.c
        tests/filesys/extended/dir-rm-root.c
        tests/filesys/extended/dir-rm-tree.c
        tests/filesys/extended/dir-rmdir.c
        tests/filesys/extended/dir-under-file.c
        tests/filesys/extended/dir-vine.c
        tests/filesys/extended/grow-create.c
        tests/filesys/extended/grow-dir-lg.c
        tests/filesys/extended/grow-file-size.c
        tests/filesys/extended/grow-root-lg.c
        tests/filesys/extended/grow-root-sm.c
        tests/filesys/extended/grow-seq-lg.c
        tests/filesys/extended/grow-seq-sm.c
        tests/filesys/extended/grow-sparse.c
        tests/filesys/extended/grow-tell.c
        tests/filesys/extended/grow-two-files.c
        tests/filesys/extended/mk-tree.c
        tests/filesys/extended/mk-tree.h
        tests/filesys/extended/syn-rw.c
        tests/filesys/extended/syn-rw.h
        tests/filesys/extended/tar.c
        tests/filesys/seq-test.c
        tests/filesys/seq-test.h
        tests/internal/list.c
        tests/internal/stdio.c
        tests/internal/stdlib.c
        tests/threads/alarm-negative.c
        tests/threads/alarm-priority.c
        tests/threads/alarm-simultaneous.c
        tests/threads/alarm-wait.c
        tests/threads/alarm-zero.c
        tests/threads/mlfqs-block.c
        tests/threads/mlfqs-fair.c
        tests/threads/mlfqs-load-1.c
        tests/threads/mlfqs-load-60.c
        tests/threads/mlfqs-load-avg.c
        tests/threads/mlfqs-recent-1.c
        tests/threads/priority-change.c
        tests/threads/priority-condvar.c
        tests/threads/priority-donate-chain.c
        tests/threads/priority-donate-lower.c
        tests/threads/priority-donate-multiple.c
        tests/threads/priority-donate-multiple2.c
        tests/threads/priority-donate-nest.c
        tests/threads/priority-donate-one.c
        tests/threads/priority-donate-sema.c
        tests/threads/priority-fifo.c
        tests/threads/priority-preempt.c
        tests/threads/priority-sema.c
        tests/threads/tests.c
        tests/threads/tests.h
        tests/userprog/no-vm/multi-oom.c
        tests/userprog/args.c
        tests/userprog/bad-jump.c
        tests/userprog/bad-jump2.c
        tests/userprog/bad-read.c
        tests/userprog/bad-read2.c
        tests/userprog/bad-write.c
        tests/userprog/bad-write2.c
        tests/userprog/boundary.c
        tests/userprog/boundary.h
        tests/userprog/child-bad.c
        tests/userprog/child-close.c
        tests/userprog/child-rox.c
        tests/userprog/child-simple.c
        tests/userprog/close-bad-fd.c
        tests/userprog/close-normal.c
        tests/userprog/close-stdin.c
        tests/userprog/close-stdout.c
        tests/userprog/close-twice.c
        tests/userprog/create-bad-ptr.c
        tests/userprog/create-bound.c
        tests/userprog/create-empty.c
        tests/userprog/create-exists.c
        tests/userprog/create-long.c
        tests/userprog/create-normal.c
        tests/userprog/create-null.c
        tests/userprog/exec-arg.c
        tests/userprog/exec-bad-ptr.c
        tests/userprog/exec-bound-2.c
        tests/userprog/exec-bound-3.c
        tests/userprog/exec-bound.c
        tests/userprog/exec-missing.c
        tests/userprog/exec-multiple.c
        tests/userprog/exec-once.c
        tests/userprog/exit.c
        tests/userprog/halt.c
        tests/userprog/multi-child-fd.c
        tests/userprog/multi-recurse.c
        tests/userprog/open-bad-ptr.c
        tests/userprog/open-boundary.c
        tests/userprog/open-empty.c
        tests/userprog/open-missing.c
        tests/userprog/open-normal.c
        tests/userprog/open-null.c
        tests/userprog/open-twice.c
        tests/userprog/read-bad-fd.c
        tests/userprog/read-bad-ptr.c
        tests/userprog/read-boundary.c
        tests/userprog/read-normal.c
        tests/userprog/read-stdout.c
        tests/userprog/read-zero.c
        tests/userprog/rox-child.c
        tests/userprog/rox-multichild.c
        tests/userprog/rox-simple.c
        tests/userprog/sc-bad-arg.c
        tests/userprog/sc-bad-sp.c
        tests/userprog/sc-boundary-2.c
        tests/userprog/sc-boundary-3.c
        tests/userprog/sc-boundary.c
        tests/userprog/wait-bad-pid.c
        tests/userprog/wait-killed.c
        tests/userprog/wait-simple.c
        tests/userprog/wait-twice.c
        tests/userprog/write-bad-fd.c
        tests/userprog/write-bad-ptr.c
        tests/userprog/write-boundary.c
        tests/userprog/write-normal.c
        tests/userprog/write-stdin.c
        tests/userprog/write-zero.c
        tests/vm/child-inherit.c
        tests/vm/child-linear.c
        tests/vm/child-mm-wrt.c
        tests/vm/child-qsort-mm.c
        tests/vm/child-qsort.c
        tests/vm/child-sort.c
        tests/vm/mmap-bad-fd.c
        tests/vm/mmap-clean.c
        tests/vm/mmap-close.c
        tests/vm/mmap-exit.c
        tests/vm/mmap-inherit.c
        tests/vm/mmap-misalign.c
        tests/vm/mmap-null.c
        tests/vm/mmap-over-code.c
        tests/vm/mmap-over-data.c
        tests/vm/mmap-over-stk.c
        tests/vm/mmap-overlap.c
        tests/vm/mmap-read.c
        tests/vm/mmap-remove.c
        tests/vm/mmap-shuffle.c
        tests/vm/mmap-twice.c
        tests/vm/mmap-unmap.c
        tests/vm/mmap-write.c
        tests/vm/mmap-zero.c
        tests/vm/page-linear.c
        tests/vm/page-merge-mm.c
        tests/vm/page-merge-par.c
        tests/vm/page-merge-seq.c
        tests/vm/page-merge-stk.c
        tests/vm/page-parallel.c
        tests/vm/page-shuffle.c
        tests/vm/parallel-merge.c
        tests/vm/parallel-merge.h
        tests/vm/pt-bad-addr.c
        tests/vm/pt-bad-read.c
        tests/vm/pt-big-stk-obj.c
        tests/vm/pt-grow-bad.c
        tests/vm/pt-grow-pusha.c
        tests/vm/pt-grow-stack.c
        tests/vm/pt-grow-stk-sc.c
        tests/vm/pt-write-code-2.c
        tests/vm/pt-write-code.c
        tests/vm/qsort.c
        tests/vm/qsort.h
        tests/arc4.c
        tests/arc4.h
        tests/cksum.c
        tests/cksum.h
        tests/lib.c
        tests/lib.h
        tests/main.c
        tests/main.h
        threads/flags.h
        threads/init.c
        threads/init.h
        threads/interrupt.c
        threads/interrupt.h
        threads/intr-stubs.h
        threads/io.h
        threads/loader.h
        threads/malloc.c
        threads/malloc.h
        threads/palloc.c
        threads/palloc.h
        threads/pte.h
        threads/switch.h
        threads/synch.c
        threads/synch.h
        threads/thread.c
        threads/thread.h
        threads/vaddr.h
        threads/fixpoint.h
        userprog/exception.c
        userprog/exception.h
        userprog/gdt.c
        userprog/gdt.h
        userprog/pagedir.c
        userprog/pagedir.h
        userprog/process.c
        userprog/process.h
        userprog/syscall.c
        userprog/syscall.h
        userprog/tss.c
        userprog/tss.h
        utils/setitimer-helper.c
        utils/squish-pty.c
        utils/squish-unix.c)
